# SOPE_PROJ

./: .gitignore  CMakeLists.txt  main.c
src/: analyzer.c  analyzer.h  dirtree.c  dirtree.h  file.c  file.h  fingerprinter.c  fingerprinter.h  log.c  log.h  main.c  parser.c  parser.h
teste/: ola
teste/src/: dirtree.c  parser.c
teste/src1/toudentrodosrc1/: dirtree.h
